# OpenCL-ICD-Loader

./: CMakeLists.txt  conanfile.py
test/: CMakeLists.txt
test/driver_stub/: CMakeLists.txt
test/loader_test/: CMakeLists.txt
test/platform/: CMakeLists.txt
